Closed Bug 365363 Opened 18 years ago Closed 17 years ago

Return value for GetJSDValue ignored leading to death

Categories

(Other Applications Graveyard :: Venkman JS Debugger, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: bugzilla-mozilla-20000923, Assigned: timeless)

References

()

Details

(Keywords: crash)

Attachments

(1 file)

1.64 KB, patch
bugzilla-mozilla-20000923
: review+
Biesinger
: superreview+
Details | Diff | Splinter Review
Users can and will do anything, especially if it isn't what the instructions say; this is a simple case-in-point. If a non-jsdIValue is returned from the JS code of the execution hook, JSD's XPC wrapper goes up in flames after the indicated line because it didn't check the return value of it.

I'm out of trees, so you're out of luck on a patch for now, but it should be trivial.
i know that the current implementation of the service can't fail, but it is possible for these things to be shifted, and i'd rather play xpcom correct than have to chase crashes later :).
Assignee: rginda → timeless
Status: NEW → ASSIGNED
Attachment #251904 - Flags: review?(silver)
Comment on attachment 251904 [details] [diff] [review]
check for failures

Looks good, r=silver.
Attachment #251904 - Flags: review?(silver) → review+
Attachment #251904 - Flags: superreview?(cbiesinger)
Comment on attachment 251904 [details] [diff] [review]
check for failures

So, I don't know this code, but I'm not sure that making InvalidateAll do nothing will lead to correct behaviour, but I guess without a context you can't do anything
Attachment #251904 - Flags: superreview?(cbiesinger) → superreview+
Comment on attachment 251904 [details] [diff] [review]
check for failures

mozilla/js/jsd/jsd_xpc.cpp 	1.81
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Product: Other Applications → Other Applications Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: