Bug 365363 Return value for GetJSDValue ignored leading to death r=silver sr=biesi